kubernetes/envs/scaleway/gamma/ingresses/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx 
  namespace: kube-system
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx    
spec:
  type: LoadBalancer
  loadBalancerIP: 195.154.71.146
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx  
  ports:
    - port: 80
      name: http
      targetPort: 80
    - port: 443
      name: https
      targetPort: 443
